--- a/a/d2.html
+++ b/a/d2.html
@@ -1,4 +1,4 @@
 <title>game 2d</title>
 <body style=text-align:center;background:#000040>
-<applet archive=/jar/d2.jar code=d2.applet width=512 height=512 style="border:1px solid green">
+<applet codebase=/bin code=d2.applet width=512 height=512 style="border:1px solid green">
 </applet>
