--- a/a/howto/upload.html
+++ b/a/howto/upload.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <pre>
-<input type="file" id="files" name="files[]" multiple> <input type=button value=send onclick="send()">
+<input type="file" id="files" name="files[]" multiple onchange="send()">
 <div id="outp" style="border:1px dotted green"></div>
 <script>
 function send(){
@@ -24,7 +24,7 @@ function upload(path,blobOrFile,progressbarId){
 	};
 	xhr.onload=function(e){
 		console.log('onload '+path+' '+xhr.status);
-		document.getElementById(progressbarId).value=1;
+		document.getElementById(progressbarId).value=100;
 	};
 	xhr.open('POST','/'+escape(path),true);
 	xhr.setRequestHeader("Content-type","file");
