--- a/howto/pczero.html
+++ b/howto/pczero.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html><meta charset="utf-8"><style>html{text-align:center;width:21em;border-radius:1em;border:1px dotted gray;font-size:1.5em;margin:.5em 0 0 2em;padding:0 0 0 1em}</style><pre>
-<div tabindex=0 onkeydown="var ab=new Uint8Array([event.keyCode]);console.log(ab);wso.send(ab);return false;" style="border:1px solid red">
-	<img id=image src="" />
+<!DOCTYPE html><meta charset="utf-8"><style>html{margin:0;padding:0;text-align:center;width:100%;}</style><pre>
+	<img id=image src="" width=1024 tabindex=0 onkeydown="var ab=new Uint8Array([event.keyCode]);console.log(ab);wso.send(ab);return false;" />
 	<output id="recvsize" style="color:blue"></output>
 	<output id="outp"></output>
-</div>
 <script>$=document.all;p(document.cookie);
 var frameno=0;
 var ws=new WebSocket("ws://"+location.host+"/pczero.o");
@@ -11,7 +9,7 @@ ws.binaryType="arraybuffer";
 ws.onopen=function(e){p("open screen");}
 ws.onmessage=function(e){
 	frameno++;
-	$.recvsize.value="frame: "+frameno+"  datalen: "+e.data.byteLength;
+	$.recvsize.value="frame: "+frameno+"  "+e.data.byteLength+" B";
 	var b64=base64ArrayBuffer(e.data);
 	var img=document.getElementById('image');
 	img.src='data:image/png;base64,'+b64;
