--- a/howto/pczero.html
+++ b/howto/pczero.html
@@ -1,7 +1,12 @@
-<!DOCTYPE html><meta charset="utf-8"><style>html{margin:0;padding:0;text-align:center;width:100%;}</style><pre>
-	<img id=image src="" width=1024 tabindex=0 onkeydown="var ab=new Uint8Array([event.keyCode]);console.log(ab);wso.send(ab);return false;" />
-	<output id="recvsize" style="color:blue"></output>
-	<output id="outp"></output>
+<!DOCTYPE html><meta charset="utf-8">
+<style>
+	html{margin:0;padding:0;text-align:center;width:100%;}
+</style>
+<pre>
+<img id=image src="" width=1024 tabindex=0 onkeydown="var ab=new Uint8Array([event.keyCode]);console.log(ab);wso.send(ab);return false;" />
+<output id="recvsize" style="color:blue"></output>
+<output id="outp"></output>
+
 <script>$=document.all;p(document.cookie);
 var frameno=0;
 var ws=new WebSocket("ws://"+location.host+"/pczero.o");
