--- a/pco.html
+++ b/pco.html
@@ -193,6 +193,8 @@ function start(){
 //			console.log(frameno);
 			var b64=base64ArrayBuffer(e.data.slice(1));
 			var img=document.getElementById('image');
+			//var blob=new Blob([e.data.slice(1)],{type:'image/png'});
+			//img.src=blob;
 			img.src='data:image/png;base64,'+b64;
 		}else if(cmd==49){
 //			console.log('text len: '+e.data.byteLength);
