--- a/pco.html
+++ b/pco.html
@@ -188,17 +188,18 @@ function start(){
 		$.recvsize.value="frame: "+frameno+"  "+e.data.byteLength+" B";
 		var ua=new DataView(e.data);
 		var cmd=ua.getUint8(0);
+		var dat=e.data.slice(1);
 //		console.log("command: "+cmd);
 		if(cmd==0){
 //			console.log(frameno);
-			var b64=base64ArrayBuffer(e.data.slice(1));
+			var b64=base64ArrayBuffer(dat);
 			var img=document.getElementById('image');
-			//var blob=new Blob([e.data.slice(1)],{type:'image/png'});
+			//var blob=new Blob([dat],{type:'image/png'});
 			//img.src=blob;
 			img.src='data:image/png;base64,'+b64;
 		}else if(cmd==49){
 //			console.log('text len: '+e.data.byteLength);
-			var str=String.fromCharCode.apply(null,new Uint8Array(e.data.slice(1)));
+			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
 //			console.log(str);
 			$.sts.value=str;
 			return;
