--- a/a/pco.html
+++ b/a/pco.html
@@ -24,8 +24,8 @@ c=*b // load blit[0].pos
 d=1 // step size
 k=7fff // keyb addr
 ld k e // load
-ifp c+=d // if d>0
-ifz c-=d // if d==0
+ifp c+=d // if e>0
+ifz c-=d // if e==0
 *b=c // store
 
 m=100 // dispwidth
@@ -178,6 +178,7 @@ blits:
 . 20e0 0000 0020 0020
 . 40e0 0000 0020 0020
 . 60e0 0000 0020 0020
+
 
 </textarea> 
 
