--- a/medusa.html
+++ b/medusa.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><meta charset="utf-8">
+<!DOCTYPE html><meta charset="utf-8"><title>medusa ascii game</title>
 <style>
 	html{white-space:pre;font-family:courier;font-size:12px;margin:0;padding:0;margin-left:auto;margin-right:auto;padding:0 4em 0 4em;display:block;text-align:center;color:#222;border-right:0px dotted #666;border-left:0px dotted #666;box-shadow:0 0 27px rgba(0,0,0,.5);border-radius:1px}
 	#scr{outline:0;border:1px solid gray;box-shadow:0 0 .5em rgba(0,0,0,.5)}
 	#recvsize{color:green}
 	#sts{color:brown}
-	#banner{display:block;height:3em}
+	#banner{display:block;height:2em}
 	#hldr{margin-left:auto;margin-right:auto}
 </style>
 <t id=banner></t>
@@ -62,7 +62,11 @@ function start(){
 	ws.onerror=function(e){alert("websocket error");};
 	$.scr.focus();
 }
+var last_time_banner_was_updated=new Date();
 function banner_update(){
+	var now=new Date();
+	if(now-last_time_banner_was_updated<5000)return;
+	last_time_banner_was_updated=now;
 	var s="medusa ascii game";
 	var size=s.length;
 	var htm='';
