--- a/medusa.html
+++ b/medusa.html
@@ -37,7 +37,7 @@ function start(){
 //		var ua=new DataView(e.data);
 		var cmd=e.data.substring(0,1);
 		var dat=e.data.substring(1);
-		console.log("command: "+cmd);
+//		console.log("command: "+cmd);
 		if(cmd==0){
 			var p=0;
 			var s='';
