--- a/a/medusa.html
+++ b/a/medusa.html
@@ -12,7 +12,7 @@
 <div id=scr tabindex=0 onkeydown="keys=new Uint8Array([0,event.keyCode]);return true;" onkeyup="keys=new Uint8Array([0,0]);return true;"></div>
 <output id=sts></output>  <output id="recvsize"></output>  <a href="javascript:stop()">off</a><a href="javascript:start()">on</a> <a href="javascript:reset()">reset</a> <output id="outp"></output>
 </td></tr></table>
-use keys wesd to move medusa
+use keys  jiop to move medusa
 
 <script>
 $=document.all;
