--- a/src/a/medusa/medusa.html
+++ b/src/a/medusa/medusa.html
@@ -10,7 +10,7 @@
 <t id=banner></t>
 <table id=hldr><tr><td>
 <div id=scr tabindex=0 onkeydown="keys=new Uint8Array([0,event.keyCode]);return true;" onkeyup="keys=new Uint8Array([0,0]);return true;"></div>
-<output id=sts></output>  <output id="recvsize"></output>  <a href="javascript:stop()">off</a><a href="javascript:start()">on</a> <a href="javascript:reset()">reset</a> <output id="outp"></output>
+<output id=sts></output>  <output id="recvsize"></output>  <output id="outp"></output>
 </td></tr></table>
 use keys  jiop to move medusa
 
