--- a/a/src/a/medusa/medusa.html
+++ b/a/src/a/medusa/medusa.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html><meta charset="utf-8"><title>medusa ascii game</title>
 <style>
-	html{white-space:pre;font-family:courier;font-size:12px;margin:0;padding:0;margin-left:auto;margin-right:auto;padding:0 4em 0 4em;display:block;text-align:center;color:#222;border-right:0px dotted #666;border-left:0px dotted #666;box-shadow:0 0 27px rgba(0,0,0,.5);border-radius:1px}
+	html{line-height:1em;white-space:pre;font-family:courier;font-size:12px;margin:0;padding:0;margin-left:auto;margin-right:auto;padding:0 4em 0 4em;display:block;text-align:center;color:#222;border-right:0px dotted #666;border-left:0px dotted #666;box-shadow:0 0 27px rgba(0,0,0,.5);border-radius:1px}
 	#scr{outline:0;border:1px solid gray;box-shadow:0 0 .5em rgba(0,0,0,.5)}
 	#recvsize{color:green}
 	#sts{color:brown}
+	#txt{color:blue}
 	#banner{display:block;height:2em}
 	#hldr{margin-left:auto;margin-right:auto}
-	#msg{border:1px dotted green;background:yellow;font-family:inherit}
+	#msg{border:1px dotted green;background:yellow;font-family:inherit;width:17em}
 </style>
 <t id=banner></t>
 <table id=hldr><tr><td>
 <div id=scr tabindex=0 onkeydown="keys[event.keyCode]=true;return true;" onkeyup="delete keys[event.keyCode];return true;"></div>
-<output id=sts></output>  <output id="recvsize"></output>  <output id="outp"></output>
+<output id=sts></output> <output id="outp"></output> <output id="recvsize"></output>
 </td></tr></table>
-use wasd keys to move medusa. label <input id=msg type=text onkeydown="if(event.keyCode==13){send(this.value);this.value='';this.focus();}">
-
+<output id=txt></output>
+type here <input id=msg type=text onkeydown="if(event.keyCode==13){send(this.value);this.focus();}">
+use wasd keys to move medusa
 <script>
 $=document.all;
+$.msg.value=document.cookie; 
 var keys={};
 var ison=false;
 var frameno=0;
@@ -32,11 +35,12 @@ function start(){
 	ws.onopen=function(e){p(" porta");var s='0';for(var k in keys)s+=String.fromCharCode(k);ws.send(s);}
 	ws.onmessage=function(e){
 		frameno++;
-		onframe();
-		$.recvsize.value="frame: "+frameno+"  "+e.data.length+" B  "+onframe.fps+" fps";
 		var cmd=e.data.substring(0,1);
 		var dat=e.data.substring(1);
-		if(cmd==0){
+//		console.log("cmd "+cmd);
+		if(cmd=='0'){
+//			console.log("screen "+e.data.length);
+			onframe();
 			var p=0;
 			var s='';
 			for(var y=0;y<40;y++){
@@ -45,11 +49,11 @@ function start(){
 				p+=80;
 			}
 			$.scr.innerHTML=s;
-		}else if(cmd==49){
-//			console.log('text len: '+e.data.byteLength);
+			$.recvsize.value="frame: "+frameno+"  "+e.data.length+" B  "+onframe.fps+" fps";
+		}else if(cmd=='1'){
+//			console.log('text: '+e.data.length+'  '+e.data);
 			var str=e.data;
-//			console.log(str);
-			$.sts.value=str;
+			$.txt.value=str.substring(1);
 			return;
 		}
 		var s='0';for(var k in keys)s+=String.fromCharCode(k);
